--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-test
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+<meta charset="gbk">
+<title>TCAS Team</title>
+
+<link rel="stylesheet" href="css/style.css">
+
+</head>
+<body>
+
+<div class="div2">
+<h1><font size="123" color="#FFF">TCAS Team</font></h1>
+<br><a href="http://117.50.176.212/netdisk"><font color="#FF0">团队网盘</font></a> || 
+<a href="http://117.50.176.212/xss/login.php"><font color="#FF0">XSS平台</font></a>
+</div>
+<div id="canvas" class="div1"></div>
+
+<script src='js/three.min.js'></script>
+<script src="js/script.js"></script>
+
+</body>
+</html>
