--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="div2">
 <h1><font size="123" color="#FFF">TCAS Team</font></h1>
 <br><a href="http://117.50.176.212/netdisk"><font color="#FF0">团队网盘</font></a> || 
-<a href="http://117.50.176.212/xss/login.php"><font color="#FF0">XSS平台</font></a>
+<a href="http://117.50.176.212/xss/login.php"><font color="#FF0">XSS平台</font></a> || 
+<a href="http://117.50.176.212/cf/cf.html"><font color="#FF0">CyberChef</font></a>  
 </div>
 <div id="canvas" class="div1"></div>
 
