--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <h1><font size="123" color="#FFF">TCAS Team</font></h1>
 <br><a href="http://117.50.176.212/netdisk"><font color="#FF0">团队网盘</font></a> || 
 <a href="http://117.50.176.212/xss/login.php"><font color="#FF0">XSS平台</font></a> || 
-<a href="http://117.50.176.212/cf/cf.html"><font color="#FF0">CyberChef</font></a>  
+<a href="http://117.50.176.212/cf/cf.html"><font color="#FF0">CyberChef</font></a> ||  
+<a href="https://xiaokv.com/tools/"><font color="#FF0">CTF练习</font></a> ||
+<a href="https://xiaokv.com/vuln/"><font color="#FF0">靶场</font></a> 
 </div>
 <div id="canvas" class="div1"></div>
 
