--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="http://117.50.176.212/xss/login.php"><font color="#FF0">XSS平台</font></a> || 
 <a href="http://117.50.176.212/cf/cf.html"><font color="#FF0">CyberChef</font></a> ||  
 <a href="https://xiaokv.com/tools/"><font color="#FF0">CTF练习</font></a> ||
+<a href="http://139.198.105.171:58888/log"><font color="#FF0">Dnslog</font></a> ||
 <a href="https://xiaokv.com/vuln/"><font color="#FF0">靶场</font></a> 
 </div>
 <div id="canvas" class="div1"></div>
